--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <td>41.990.000₫</td>
             <td>1</td>
             <td>Samsung</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
           <tr>
@@ -175,7 +175,7 @@
             <td>15.990.000₫</td>
             <td>1</td>
             <td>Iphone</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
           <tr>
@@ -190,7 +190,7 @@
             <td>10.390.000₫</td>
             <td>1</td>
             <td>Xiaomi</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
           <tr>
@@ -205,7 +205,7 @@
             <td>6.990.000₫</td>
             <td>1</td>
             <td>OPPO</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
           <tr>
@@ -220,7 +220,7 @@
             <td>7.990.000₫</td>
             <td>1</td>
             <td>Samsung</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
           <tr>
@@ -235,7 +235,7 @@
             <td>9.990.000₫</td>
             <td>1</td>
             <td>Vivo</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
 
@@ -251,7 +251,7 @@
             <td>26.990.000₫</td>
             <td>1</td>
             <td>Samsung</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
           <tr>
@@ -266,7 +266,7 @@
             <td>990.000₫</td>
             <td>1</td>
             <td>Nokia</td>
-            <td>Hàng chính hãng</td>
+            <td>Authentic</td>
             <td>New</td>
           </tr>
         </tbody>
